--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cz.jirutka.rsql</groupId>
     <artifactId>rsql-hibernate</artifactId>
-    <version>1.1</version>
+    <version>1.1.2</version>
     <packaging>jar</packaging>
 
     <name>RSQL-hibernate</name>
@@ -62,6 +62,12 @@
         <dependency>
             <groupId>cz.jirutka.rsql</groupId>
             <artifactId>rsql-parser</artifactId>
+            <version>1.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>cz.jirutka.commons</groupId>
+            <artifactId>commons-hibernate</artifactId>
             <version>1.0</version>
         </dependency>
         
