--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-      
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cz.jirutka.rsql</groupId>
-    <artifactId>rsql-hibernate</artifactId>
-    <version>1.1.3</version>
+    <groupId>br.tennaito.rsql</groupId>
+    <artifactId>rsql-jpa</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
 
     <!--//////////////////// ABOUT ////////////////////-->
 
-    <name>RSQL-hibernate</name>
-    <inceptionYear>2011</inceptionYear>
-    <url>http://github.com/jirutka/rsql-hibernate</url>
-   
-    <developers>
-        <developer>
-            <name>Jakub Jirutka</name>
-            <email>jakub@jirutka.cz</email>
-            <organization>CVUT</organization>
-            <organizationUrl>http://www.cvut.cz</organizationUrl>
-        </developer>
-    </developers>
+    <name>RSQL-JPA</name>
+    <inceptionYear>2015</inceptionYear>
 
     <licenses>
         <license>
@@ -33,79 +23,39 @@
     </licenses>
 
     <scm>
-        <url>http://github.com/jirutka/rsql-hibernate</url>
-        <connection>scm:git:git@github.com:jirutka/rsql-hibernate.git</connection>
+        <url>http://github.com/tennaito/rsql-jpa</url>
+        <connection>scm:git:git@github.com:tennaito/rsql-jpa.git</connection>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <id>cvut-libs-release-local</id>
-            <name>CVUT Release Repository</name>
-            <url>http://repository.fit.cvut.cz/maven/libs-release-local/</url>
-        </repository>
-
-        <snapshotRepository>
-            <id>cvut-libs-snapshot-local</id>
-            <name>CVUT Snapshot Repository</name>
-            <url>http://repository.fit.cvut.cz/maven/libs-snapshot-local/</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
-    
-    
     <!--//////////////////// PROPERTIES ////////////////////-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
-    
-    <!--//////////////////// REPOSITORIES ////////////////////-->
-  
-    <repositories>
-        <repository>
-            <id>cvut-local-repos</id>
-            <name>CVUT Repository Local</name>
-            <url>http://repository.fit.cvut.cz/maven/local-repos/</url>
-        </repository>
 
-        <repository>
-            <id>jboss-public-repository-group</id>
-            <name>JBoss Public Maven Repository Group</name>
-            <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-        </repository>
-    </repositories>
-    
-    
     <!--//////////////////// DEPENDENCIES ////////////////////-->
 
     <dependencies>
-        
+
         <!-- Compile scope -->
         <dependency>
             <groupId>cz.jirutka.rsql</groupId>
             <artifactId>rsql-parser</artifactId>
-            <version>1.0.1</version>
+            <version>2.0.0</version>
         </dependency>
-        
-        <dependency>
-            <groupId>cz.jirutka.commons</groupId>
-            <artifactId>commons-hibernate</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>3.6.3.Final</version>
-        </dependency>
-        
+
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.6.0-M3</version>
+		</dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
         </dependency>
-        
+
         <!-- Test scope -->
         <dependency>
             <groupId>junit</groupId>
@@ -113,21 +63,14 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>1.8.0.10</version>
             <scope>test</scope>
         </dependency>
-        
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.6.3.Final</version>
-            <scope>test</scope>
-        </dependency>
-        
+
     </dependencies>
 
 
@@ -155,5 +98,5 @@
             </build>
         </profile>
     </profiles>
-    
+    <url>http://github.com/tennaito/rsql-jpa</url>
 </project>
