--- a/pom.xml
+++ b/pom.xml
@@ -44,19 +44,20 @@
             <version>2.0.0</version>
         </dependency>
 
+		<!-- Unfortunately we don´t have a cannonical javax.persistence 2.1 yet -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+        <!-- Test scope -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
 			<version>2.6.0-M3</version>
+			<scope>test</scope>
 		</dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <!-- Test scope -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -70,9 +71,7 @@
             <version>1.8.0.10</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
 
     <!--//////////////////// PROFILES ////////////////////-->
 
