Create distribution management.

--- a/pom.xml
+++ b/pom.xml
@@ -8,23 +8,33 @@
     <artifactId>rsql-jpa</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-
-
+    
     <!--//////////////////// ABOUT ////////////////////-->
-
     <name>RSQL-JPA</name>
     <inceptionYear>2015</inceptionYear>
+	<description>A application used to translate  RSQL nodes to JPA Criteria Query.</description>
+    <url>http://github.com/tennaito/rsql-jpa</url>
 
+    <!--//////////////////// LICENSE ////////////////////-->
     <licenses>
         <license>
             <name>MIT</name>
             <url>http://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-
+    
+    <!--//////////////////// DEVELOPER///////////////////-->
+    <developers>
+    	<developer>
+      		<name>Antonio Rabelo</name>
+    	</developer>
+	</developers>
+    
+	<!--//////////////////// SCM     ///////////////////-->
     <scm>
         <url>http://github.com/tennaito/rsql-jpa</url>
         <connection>scm:git:git@github.com:tennaito/rsql-jpa.git</connection>
+        <developerConnection>scm:git:git@github.com:tennaito/rsql-jpa.git</developerConnection>
     </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
@@ -34,7 +44,6 @@
     </properties>
 
     <!--//////////////////// DEPENDENCIES ////////////////////-->
-
     <dependencies>
 
         <!-- Compile scope -->
@@ -97,5 +106,77 @@
             </build>
         </profile>
     </profiles>
-    <url>http://github.com/tennaito/rsql-jpa</url>
+    
+    <!--//////////////////// DISTRIBUTION ////////////////////-->
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>	
+	<ciManagement>
+		<system>travis</system>
+		<url>https://travis-ci.org/tennaito/rsql-jpa</url>
+	</ciManagement>
+	
+	<!--//////////////////// BUILD ////////////////////-->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.3</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>    
 </project>
