--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.tennaito.rsql</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -35,7 +33,8 @@
         <url>http://github.com/tennaito/rsql-jpa</url>
         <connection>scm:git:git@github.com:tennaito/rsql-jpa.git</connection>
         <developerConnection>scm:git:git@github.com:tennaito/rsql-jpa.git</developerConnection>
-    </scm>
+      <tag>rsql-jpa-1.0.0</tag>
+  </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
 
