--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     
 	<!--//////////////////// SCM     ///////////////////-->
     <scm>
-        <url>http://github.com/tennaito/rsql-jpa</url>
+        <url>https://github.com/tennaito/rsql-jpa</url>
         <connection>scm:git:git@github.com:tennaito/rsql-jpa.git</connection>
         <developerConnection>scm:git:git@github.com:tennaito/rsql-jpa.git</developerConnection>
   </scm>
