--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.tennaito.rsql</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -30,9 +30,9 @@
     
 	<!--//////////////////// SCM    ////////////////////-->
     <scm>
-        <url>https://github.com/tennaito/rsql-jpa</url>
-        <connection>scm:svn:https://github.com/tennaito/rsql-jpa</connection>
-        <developerConnection>scm:svn:https://github.com/tennaito/rsql-jpa</developerConnection>
+        <url>https://github.com/tennaito/rsql-jpa/tags/1.0.0</url>
+        <connection>scm:svn:https://github.com/tennaito/rsql-jpa/tags/1.0.0</connection>
+        <developerConnection>scm:svn:https://github.com/tennaito/rsql-jpa/tags/1.0.0</developerConnection>
   </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
