--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+	<!--//////////////////// BUILD ////////////////////-->
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+				    <groupId>org.jacoco</groupId>
+				    <artifactId>jacoco-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
     <!--//////////////////// PROFILES ////////////////////-->
 
