--- a/pom.xml
+++ b/pom.xml
@@ -81,25 +81,6 @@
         </dependency>
     </dependencies>
     
-	<!--//////////////////// BUILD ////////////////////-->
-	<build>
-		<pluginManagement>
-			<plugins>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.7.1.201405082137</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.eluder.coveralls</groupId>
-                    <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>2.2.0</version>
-                </plugin>			
-			</plugins>
-		</pluginManagement>
-	</build>
-
     <!--//////////////////// PROFILES ////////////////////-->
 
     <profiles>
@@ -172,6 +153,105 @@
 				</plugins>
 			</build>    
         </profile>
+        <!--
+            General profile for CI to analyze code coverage.
+        -->
+        <profile>
+            <id>ci</id>
+
+            <!-- Will be automatically activated on Travis CI and possibly other CI environments. -->
+            <activation>
+                <property>
+                    <name>env.CI</name>
+                </property>
+            </activation>
+
+            <properties>
+                <!-- Properties specific for Sonar -->
+                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+                <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+                <sonar.jacoco.itReportPath>${project.build.directory}/jacoco-it.exec</sonar.jacoco.itReportPath>
+            </properties>
+
+            <build>
+                <plugins>
+                    <!--
+                        Analyze code coverage with JaCoCo.
+                    -->
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>prepare-agent-integration</id>
+                                <goals>
+                                    <goal>prepare-agent-integration</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>        
+        <!--
+            Profile for Travis CI to use Coveralls.
+        -->
+        <profile>
+            <id>travis-ci</id>
+
+            <!-- Will be automatically activated on Travis CI. -->
+            <activation>
+                <property>
+                    <name>env.TRAVIS</name>
+                </property>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <!-- Merge execution data for unit and integration tests. -->
+                            <execution>
+                                <id>merge-exec-data</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>merge</goal>
+                                </goals>
+                                <configuration>
+                                    <fileSets>
+                                        <fileSet>
+                                            <directory>${project.build.directory}</directory>
+                                            <includes>
+                                                <include>*.exec</include>
+                                            </includes>
+                                        </fileSet>
+                                    </fileSets>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!--
+                        Plugin for submitting code coverage reports to Coveralls.
+                        To get it work on Travis, add these lines into your .travis.yml:
+                            script: 'mvn verify -B'
+                            after_success: 'mvn jacoco:report coveralls:jacoco'
+                    -->
+                    <plugin>
+                        <groupId>org.eluder.coveralls</groupId>
+                        <artifactId>coveralls-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>        
     </profiles>
     
     <!--//////////////////// DISTRIBUTION ////////////////////-->
