--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <!--//////////////////// PROFILES ////////////////////-->
 
     <profiles>
@@ -181,6 +181,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.7.1.201405082137</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
@@ -217,6 +218,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.1.201405082137</version>
                         <executions>
                             <!-- Merge execution data for unit and integration tests. -->
                             <execution>
@@ -248,6 +250,7 @@
                     <plugin>
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
+						<version>2.2.0</version>                        
                     </plugin>
                 </plugins>
             </build>
