--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.tennaito.rsql</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -30,10 +30,9 @@
     
 	<!--//////////////////// SCM    ////////////////////-->
     <scm>
-        <url>https://github.com/tennaito/rsql-jpa/tags/1.0.0</url>
+        <url>https://github.com/tennaito/rsql-jpa/</url>
         <connection>scm:git:https://github.com/tennaito/rsql-jpa.git</connection>
         <developerConnection>scm:git:https://github.com/tennaito/rsql-jpa.git</developerConnection>
-    <tag>HEAD</tag>
   </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
