--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.tennaito.rsql</groupId>
+    <groupId>com.github.tennaito</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -33,7 +33,6 @@
         <url>https://github.com/tennaito/rsql-jpa/</url>
         <connection>scm:git:https://github.com/tennaito/rsql-jpa.git</connection>
         <developerConnection>scm:git:https://github.com/tennaito/rsql-jpa.git</developerConnection>
-    <tag>HEAD</tag>
   </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
