--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.tennaito</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -33,7 +33,7 @@
         <url>https://github.com/tennaito/rsql-jpa/</url>
         <connection>scm:git:https://github.com/tennaito/rsql-jpa.git</connection>
         <developerConnection>scm:git:https://github.com/tennaito/rsql-jpa.git</developerConnection>
-    	<tag>HEAD</tag>
+    	<tag>1.0.2</tag>
   </scm>
 
     <!--//////////////////// PROPERTIES ////////////////////-->
