(2.0.0) - Fix design for JPA query creation (must define a From). That affects the PredicateBuilderStrategy interface and the usage of JpaPredicateVisitor; - Correction of the DefaultArgumentParser to accept primitives; - Minor fixes;

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 		</dependency>
 
         <!-- Test scope -->
+        <!-- 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.10.Final</version>
+			<scope>test</scope>
+		</dependency>
+ 		-->		
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
