--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.tennaito</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>2.0.6-SNAPSHOT</version>
+    <version>2.0.7-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -52,7 +52,7 @@
             <version>2.0.0</version>
         </dependency>
 
-		<!-- Unfortunately we don´t have a cannonical javax.persistence 2.1 yet -->
+		<!-- Unfortunately we don´t have a canonical javax.persistence 2.1 yet -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>javax.persistence</artifactId>
