--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,9 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+					    	<additionalparam>-Xdoclint:none</additionalparam>
+					    </configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
