--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.com.elotech</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
@@ -39,6 +39,7 @@
     <!--//////////////////// PROPERTIES ////////////////////-->
 
     <properties>
+	    <additionalparam>-Xdoclint:none</additionalparam>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
