--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.com.elotech</groupId>
     <artifactId>rsql-jpa</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <!--//////////////////// ABOUT ////////////////////-->
