--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>rsql-jpa</artifactId>
     <version>2.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
-    
+
     <!--//////////////////// ABOUT ////////////////////-->
     <name>RSQL-JPA</name>
     <inceptionYear>2015</inceptionYear>
@@ -20,14 +20,14 @@
             <url>http://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    
+
     <!--//////////////////// DEVELOPER///////////////////-->
     <developers>
     	<developer>
       		<name>Antonio Rabelo</name>
     	</developer>
 	</developers>
-    
+
 	<!--//////////////////// SCM    ////////////////////-->
     <scm>
         <url>https://github.com/tennaito/rsql-jpa/</url>
@@ -49,14 +49,13 @@
         <dependency>
             <groupId>cz.jirutka.rsql</groupId>
             <artifactId>rsql-parser</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0</version>
         </dependency>
 
-		<!-- Unfortunately we don´t have a canonical javax.persistence 2.1 yet -->
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>javax.persistence</artifactId>
-			<version>2.1.0</version>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
 		</dependency>
 
         <!-- Test scope -->
@@ -98,7 +97,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5</version>
+						<version>2.5.3</version>
 						<configuration>
 							<autoVersionSubmodules>true</autoVersionSubmodules>
 							<useReleaseProfile>false</useReleaseProfile>
@@ -109,7 +108,7 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.3</version>
+						<version>1.6.8</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
@@ -120,7 +119,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>2.2.1</version>
+						<version>3.0.1</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -133,7 +132,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
+						<version>3.0.1</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -146,7 +145,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
+						<version>1.6</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -158,7 +157,7 @@
 						</executions>
 					</plugin>
 				</plugins>
-			</build>    
+			</build>
         </profile>
         <!--
             General profile for CI to analyze code coverage.
@@ -206,7 +205,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>        
+        </profile>
         <!--
             Profile for Travis CI to use Coveralls.
         -->
@@ -257,13 +256,13 @@
                     <plugin>
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
-						<version>2.2.0</version>                        
+						<version>2.2.0</version>
                     </plugin>
                 </plugins>
             </build>
-        </profile>        
+        </profile>
     </profiles>
-    
+
     <!--//////////////////// DISTRIBUTION ////////////////////-->
 	<distributionManagement>
 		<snapshotRepository>
@@ -274,7 +273,7 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-	</distributionManagement>	
+	</distributionManagement>
 	<ciManagement>
 		<system>travis</system>
 		<url>https://travis-ci.org/tennaito/rsql-jpa</url>
@@ -282,5 +281,5 @@
 	<issueManagement>
 		<system>GitHub</system>
 		<url>https://github.com/tennaito/rsql-jpa/issues</url>
-	</issueManagement>	
+	</issueManagement>
 </project>
