Fix assembly goal failing on parent project

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,17 @@
 
     <!--//////////////////// PROFILES ////////////////////-->
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <skipAssembly>true</skipAssembly>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
 		    <id>release</id>
