--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,19 @@
     <!--//////////////////// ABOUT ////////////////////-->
     <name>RSQL-JPA</name>
     <inceptionYear>2015</inceptionYear>
-	<description>A application used to translate  RSQL nodes to JPA Criteria Query.</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <description>A application used to translate  RSQL nodes to JPA Criteria Query.</description>
     <url>http://github.com/tennaito/rsql-jpa</url>
 
     <!--//////////////////// LICENSE ////////////////////-->
